# mongo-tools-rs

./: Cargo.toml  README.md
bsondump/: Cargo.toml  README.md
bsondump/src/: bytes.rs  docbytes.rs  lib.rs  main.rs
bsondump/tests/: bsondump.rs
