[package]
name = "bsondump"
version = "0.1.0"
authors = ["glowe <graham@spinlag.com>"]
edition = "2021"
description = """View and debug .bson files.

See http://docs.mongodb.org/manual/reference/program/bsondump/ for more information."""

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bson = "2.3.0"
clap = {version = "3.2.14", features = ["derive"]}
clap-verbosity-flag = "1.0.1"
env_logger = "0.9.0"
log = "0.4.17"
serde = "1.0.140"
serde_json = "1.0.82"

[dev-dependencies]
rand = "0.8.5"
test_bin = "0.4.0"
tempfile = "3.3.0"

[profile.release]
opt-level = 3
